--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^5.3.0",
+    "@sanity/image-url": "^1.0.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.2.3",
+    "http-proxy-middleware": "^2.0.6",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
