--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.2.3",
     "http-proxy-middleware": "^2.0.6",
-    "next": "13.2.3",
+    "next": "^13.2.4",
     "next-navigation": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
